studentportal-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: studentportal-ingress
  

spec:
  ingressClassName: nginx

  rules:
    - host: aravindh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 80

    - host: www.aravindh.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 80
